[tool.poetry]
name = "fetch-papers"
version = "0.1.0"
description = "A CLI tool to fetch research papers based on user queries."
authors = ["Sai Balaji <v.saibalaji3437@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.32.3,<3.0.0"
typer = ">=0.15.1,<0.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "fetch_papers.cli:app"

